# Easy_DeepLFramework

./: CMakeLists.txt  ReadMe.txt  TODOList.md
configs/: types-supported.config
src/: main.cpp
src/Core/Base/: base.cpp  base.h
src/Core/Node/: base_node.h  node.h
src/Core/Tensor/: activation_func_impl_t.h  loss_func_impl_t.h  native_func_impl_t.h  tensor.cpp  tensor.h  tensorBuffer.h
src/Core/allocators/: default_allocator.cpp  default_allocator.h
src/Core/autograd/: autograd_graph.h
src/Dataset/: Dataset.h  MNIST.h
src/Function/: Function.h  activation_func.h  common_func.h  loss_func.h
src/Layers/: Layer.h  LayerBase.h  Linear.h  LogSoftmax.h  ReLU.h  Softmax.h  Tanh.h
src/Model/: Model.h
src/Pipeline/: Pipeline.h
src/Test/: BostonHousing_Test.h
src/Variable/: Variable.cpp  Variable.h
src/optimizers/: Optimizer.h
src/utils/: utils.cpp  utils.h
